--- a/content/09-plutus/03-plutus-scripts.mdx
+++ b/content/09-plutus/03-plutus-scripts.mdx
@@ -7,7 +7,7 @@ Cardano uses scripts to validate actions. These scripts, which are pieces of cod
 
 ## What are scripts?
 
-A *script* is a program that decides whether the transaction that spends the output is authorized to do so. Such a script is called a validator script - it validates whether the spending is allowed.
+A *script* is a program that decides whether the transaction that spends the output is authorized to do so. Such a script is called a validator script – it validates whether the spending is allowed.
 
 As an example, a simple validator script could check whether a particular key signed the spending transaction – this would exactly replicate the behavior of the simpler pay-from-pubkey outputs. However, with a bit of careful extension, we can use scripts to express more useful logic on the chain than that.
 
