--- a/content/09-plutus/11-transaction-costs-determinism.mdx
+++ b/content/09-plutus/11-transaction-costs-determinism.mdx
@@ -60,7 +60,7 @@ The following key points make the outcomes of script and transaction validation 
 
 Script validation failure or success does affect how a transaction is processed. However, the *True* or *False* outcome, as well as ledger changes associated with either outcome, are predictable for a given transaction.
 
-You can also use the [Plutus fee estimator](https://docs.cardano.org/cardano-testnet/tools/plutus-fee-estimator) to predict script and transactions fees.
+You can also use the [Plutus fee estimator](https://docs.cardano.org/cardano-testnet/tools/plutus-fee-estimator) to predict script and transaction fees.
 
 ### Further reading:
 
