--- a/content/05-cardano-testnet/09-pioneer-programs/01-plutus-pioneers.mdx
+++ b/content/05-cardano-testnet/09-pioneer-programs/01-plutus-pioneers.mdx
@@ -1,9 +1,15 @@
 ---
-title: Plutus pioneer program
-metaTitle: Plutus pioneer program
+title: Plutus Pioneer program
+metaTitle: Plutus Pioneer program
 ---
 
-## What is the Plutus pioneer program?
+>Before you start, note that Plutus Core, Cardano’s native smart contract language, is written in Haskell. Plutus contracts are effectively Haskell programs and that is why it is essential to know the basics of Haskell before enrolling in the Plutus Pioneer program. 
+
+>Join a new Haskell Bootcamp course. With unique code examples and interesting homework that has prepared solutions you can learn the fundamentals of Haskell and be prepared. 
+
+>[Yes, I am interested!](https://iohk.instructure.com/courses/141)
+
+## What is the Plutus Pioneer program?
 
 It is a program to recruit and train developers in Plutus for the Cardano ecosystem. When you join this program, you will become part of a group with access to a set of courses that teach you the core principles of how to code in both Haskell and Plutus. It will be highly interactive, with weekly videos, exercises, and Q&A sessions, along with exclusive access to the creators and key experts in the language. You will also be able to join a dedicated community channel, created to help pioneers connect to each other as you learn.
 
@@ -36,7 +42,7 @@ As with all learning experiences, the more you put in the more you will get out!
 
 Our third course has just finished. Depending on demand, we plan to open up a fourth cohort later in the summer, so please register your interest today to hear more in due course.
 
-## How can I register for the Plutus pioneer program?
+## How can I register for the Plutus Pioneer program?
 
 If you are interested in joining a future cohort of this program, please complete the registration form below. You will receive a short application form, and we will be in touch when we have fresh course dates to offer.
 
