--- a/content/05-cardano-testnet/09-pioneer-programs/02-marlowe-pioneers.mdx
+++ b/content/05-cardano-testnet/09-pioneer-programs/02-marlowe-pioneers.mdx
@@ -1,18 +1,18 @@
 ---
-title: Marlowe pioneer program
-metaTitle: Marlowe pioneer program
+title: Marlowe Pioneer program
+metaTitle: Marlowe Pioneer program
 ---
 
-## What is the Marlowe pioneer program?
+## What is the Marlowe Pioneer program?
 
 This is a program designed to train developers and anyone interested in decentralized finance products to write financial smart contracts (such as loans, swaps, CFDs and so on) using the Marlowe product suite.
 
 When you join this program, you will become part of a focused group of developers who will get early access to a new course built to teach you how to build, simulate, analyze, and run financial smart contracts using Marlowe.
 
-We’re aiming to keep this course interactive, with weekly videos, exercises, and Q&A sessions, along with exclusive access to the course creators and key experts in the field. You will also get access to a dedicated Marlowe community channel, created specifically to help Pioneers connect to each other.
+We’re aiming to keep this course interactive, with weekly videos, exercises, and Q&A sessions, along with exclusive access to the course creators and key experts in the field. You will also get access to a dedicated Marlowe community channel, created specifically to help pioneers connect to each other.
 
 *We are no longer accepting registrations for the Marlowe Pioneer Program. We will be informing you about the next editions of the program in due course.*
 
 To find out more and track future course announcements see:
 
-* **[Marlowe pioneers](https://pioneers.marlowe-finance.io/)**
+* **[Marlowe Pioneers](https://pioneers.marlowe-finance.io/)**
