all testnets and mainnet have updated to Babbage

--- a/content/05-cardano-testnet/03-getting-started.mdx
+++ b/content/05-cardano-testnet/03-getting-started.mdx
@@ -82,7 +82,7 @@ Preview is the longer-term network environment for testing release candidates an
 
 Pre-production is the most mature network for testing purposes, which resembles a production (mainnet) environment. It is meant for exchanges, SPOs, pre-deployment DApps, and wallets that wish to test release functionality before deploying on mainnet.
 
-- **Current era** : Alonzo.
+- **Current era** : Babbage
 - **Epoch length** : 5 days
 - **Plutus versions** : Plutus V1
 - **Cost model** : Plutus V2 _not_ updated
@@ -93,7 +93,7 @@ Pre-production is the most mature network for testing purposes, which resembles 
 
 Production is the live network, also referred to as mainnet. It features official functionality releases. Exchanges, SPOs, DApps, wallets, and end users can use the mainnet for development, transaction processing, and other needs.
 
-- **Current era** : Alonzo
+- **Current era** : Babbage
 - **Epoch length** : 5 days
 - **Plutus versions** : Plutus V1
 - **Cost model** : Plutus V2 _not_ updated
