update plutus versions and cost model

--- a/content/05-cardano-testnet/03-getting-started.mdx
+++ b/content/05-cardano-testnet/03-getting-started.mdx
@@ -84,8 +84,8 @@ Pre-production is the most mature network for testing purposes, which resembles 
 
 - **Current era** : Babbage
 - **Epoch length** : 5 days
-- **Plutus versions** : Plutus V1
-- **Cost model** : Plutus V2 _not_ updated
+- **Plutus versions** : Plutus V1 and Plutus V2
+- **Cost model** : Plutus V2
 
 [**Pre-production configurations**](https://book.world.dev.cardano.org/environments.html#pre-production-testnet)
 
@@ -95,8 +95,8 @@ Production is the live network, also referred to as mainnet. It features officia
 
 - **Current era** : Babbage
 - **Epoch length** : 5 days
-- **Plutus versions** : Plutus V1
-- **Cost model** : Plutus V2 _not_ updated
+- **Plutus versions** : Plutus V1 and Plutus V2
+- **Cost model** : Plutus V2
 
 [**Production configurations**](https://book.world.dev.cardano.org/environments.html#production-mainnet)
 
