adding more links to Plutus tools

--- a/content/09-plutus/02-plutus-resources.mdx
+++ b/content/09-plutus/02-plutus-resources.mdx
@@ -113,11 +113,20 @@ If you are a community member engaged with Plutus development, please raise a pu
 -   [Cardano Stack Exchange](https://cardano.stackexchange.com/)
 -   [Cardano Forum](https://forum.cardano.org/)
 
-## Plutus open source tooling
+## Plutus tooling
+
+There are different tools that developers can use to evaluate and deploy smart contracts on Cardano:
+
+-   **IOG**
+    - [Plutus tools overview](https://plutus-apps.readthedocs.io/en/latest/plutus/explanations/plutus-tools-component-descriptions.html#)
+    
+-   **Emurgo**
+    - [Cardano serialization library](https://github.com/Emurgo/cardano-serialization-lib#readme)
 
 -   **Plutonomicon**
     - [Plutonomicon - independent community Plutus documentation](https://github.com/Plutonomicon/plutonomicon/blob/main/README.md)
     - [Plutonomicon - GitHub Repositories](https://github.com/Plutonomicon)
+    - [Plutonomicon - cardano-transaction-lib](https://github.com/Plutonomicon/cardano-transaction-lib#readme)
     
 -   **Harmonic**
     -  [HarmonicPool (Harmonic) - GitHub Repositories](https://github.com/HarmonicPool)
@@ -125,7 +134,8 @@ If you are a community member engaged with Plutus development, please raise a pu
 -   **TxPipe**
     - [Aiken](https://github.com/txpipe/aiken)
     - [Oura](https://github.com/txpipe/oura)
-     - [Scrolls](https://github.com/txpipe/scrolls)
+    - [Scrolls](https://github.com/txpipe/scrolls)
+    - [Pallas](https://github.com/txpipe/pallas#readme)
     
 -   **dcSpark**
     - [Carp](https://github.com/dcSpark/carp/tree/main/docs)
@@ -136,6 +146,15 @@ If you are a community member engaged with Plutus development, please raise a pu
 
 -   **dQuadrant**
     - [Kuber](https://github.com/dQuadrant/kuber#readme)
+
+-   **CardanoSolutions**
+    - [Kupo](https://github.com/CardanoSolutions/kupo#readme)
+    - [Ogmios](https://github.com/CardanoSolutions/ogmios#readme)
+
+- **Other tools**
+    - [Blockfrost](https://github.com/blockfrost)
+    - [Helios](https://github.com/Hyperion-bt/Helios#readme)
+    - [Lucid](https://github.com/spacebudz/lucid#readme)
 
 ## Environment setup
 
@@ -162,7 +181,7 @@ If you are a community member engaged with Plutus development, please raise a pu
 -   [Loxe Inc. - Cardano Builders Check-In](https://youtube.com/playlist?list=PLzRV1oB99VB7zGbzi_qBsctCgP-C41n5A)
 -   [Cardano - DApp360 Workforce LLC - School for Cardano Developers](https://www.dapp360.io/d360-training/cardano/)
 
-## Blog posts about Plutus on iohk.io
+## Blog posts about Plutus on IOHK blog
 
 Please note that the blog posts are presented starting with the most recent ones:
 
