Add Koios to list of tools
Distributed query and tx submission layer

--- a/content/09-plutus/02-plutus-resources.mdx
+++ b/content/09-plutus/02-plutus-resources.mdx
@@ -154,6 +154,7 @@ There are different tools that developers can use to evaluate and deploy smart c
 - **Other tools**
     - [Blockfrost](https://github.com/blockfrost)
     - [Helios](https://github.com/Hyperion-bt/Helios#readme)
+    - [Koios](https://koios.rest)
     - [Lucid](https://github.com/spacebudz/lucid#readme)
 
 ## Environment setup
