--- a/content/02-new-to-cardano/10-what-is-a-smart-contract.mdx
+++ b/content/02-new-to-cardano/10-what-is-a-smart-contract.mdx
@@ -19,7 +19,7 @@ In summary, smart contracts are immutable as a contract cannot be changed, they
 are distributable and tamper-proof, fast and cost effective, as there is no
 middle man which saves money and time, and is safe due to encryption.
 
-Cardano has introduced smart contract support in 2021. As a multi-functional
+Cardano introduced smart contract support in 2021. As a multi-functional
 environment, Cardano supports the development and deployment of smart
 contracts using such programming languages as:
 
