New links to dev tooling

--- a/content/09-plutus/02-plutus-resources.mdx
+++ b/content/09-plutus/02-plutus-resources.mdx
@@ -117,6 +117,8 @@ If you are a community member engaged with Plutus development, please raise a pu
 
 There are different tools that developers can use to evaluate and deploy smart contracts on Cardano:
 
+-    [An extended list of community-built developer tools on Cardano](https://www.essentialcardano.io/article/a-list-of-community-built-developer-tools-on-cardano): includes NFT creation tools, smart contract platforms, software libraries, APIs, interfaces, SDKs, digital product platforms, data services, blockchain integration, automation tools, decentralized protocols, enterprise apps, stake pool tooling, and more.
+
 -   **IOG**
     - [Plutus tools overview](https://plutus-apps.readthedocs.io/en/latest/plutus/explanations/plutus-tools-component-descriptions.html#)
     
@@ -136,6 +138,7 @@ There are different tools that developers can use to evaluate and deploy smart c
     - [Oura](https://github.com/txpipe/oura)
     - [Scrolls](https://github.com/txpipe/scrolls)
     - [Pallas](https://github.com/txpipe/pallas#readme)
+    - [Demeter Run](https://demeter.run/) - a cloud environment with all the tools for building DApps on Cardano
     
 -   **dcSpark**
     - [Carp](https://github.com/dcSpark/carp/tree/main/docs)
