feat(readmedoc): make repo readme api calls at build time

--- a/content/13-readme-documentation/01-cardano-wallet.mdx
+++ b/content/13-readme-documentation/01-cardano-wallet.mdx
@@ -1,8 +1,5 @@
 ---
 title: Cardano wallet
 metaTitle: Cardano wallet
+repo: cardano-wallet
 ---
-
-import ReadmeDoc from '../../src/components/readmedoc'
-
-<ReadmeDoc repo="cardano-wallet" />
