--- a/content/13-readme-documentation/02-daedalus.mdx
+++ b/content/13-readme-documentation/02-daedalus.mdx
@@ -1,8 +1,5 @@
 ---
 title: Daedalus
 metaTitle: Daedalus
+repo: "daedalus"
 ---
-
-import ReadmeDoc from '../../src/components/readmedoc'
-
-<ReadmeDoc repo="daedalus" />
