--- a/content/08-cardano-sidechains/01-basics/03-block-explorer.mdx
+++ b/content/08-cardano-sidechains/01-basics/03-block-explorer.mdx
@@ -1,6 +1,6 @@
 ---
-title: 'Block Explorer Glossary'
-metaTitle: 'Block Explorer Glossary'
+title: 'About Block Explorer'
+metaTitle: 'About Block Explorer'
 ---
 # Block Explorer
 A block explorer allows you to inspect a blockchain to see its blocks and
