--- a/content/08-cardano-sidechains.mdx
+++ b/content/08-cardano-sidechains.mdx
@@ -1,6 +1,6 @@
 ---
-title: Cardano components
-metaTitle: Cardano components
+title: Cardano sidechains
+metaTitle: Cardano sidechains
 ---
 
 <!-- heading no content -->
