Changes requested by David Rosales

--- a/content/08-cardano-sidechains/03-build/06-using-web3-js.mdx
+++ b/content/08-cardano-sidechains/03-build/06-using-web3-js.mdx
@@ -1,6 +1,6 @@
 ---
-title: How to use the Web3.js interface with the Cardano EVM sidechain client
-metaTitle: How to use the Web3.js interface with the Cardano EVM sidechain client
+title: Using Web3.js
+metaTitle: Using Web3.js
 ---
 
 
