Update network details

--- a/content/08-cardano-sidechains/02-network/00-network-details.mdx
+++ b/content/08-cardano-sidechains/02-network/00-network-details.mdx
@@ -9,9 +9,9 @@ This page provides basic reference to Cardano EVM sidechain networks including R
 
 ## Networks
 
-| Name | Network | Chain ID  | Concensus | Gas Token |
+| Name | Network | Chain ID  | Consensus | Gas Token |
 | --- | :---: | :---: | :---: | :---: |
-| Evm sidechain | MainNet | TBD | PoS | TBD |
+
 | Atago | TestNet | 78 | PoS | TBD |
 
 ## Utilities
