--- a/content/04-explore-cardano/02-cardano-architecture.mdx
+++ b/content/04-explore-cardano/02-cardano-architecture.mdx
@@ -3,9 +3,8 @@ title: Cardano architecture
 metaTitle: Cardano architecture
 ---
 
-This section describes the high-level architecture of Cardano. It provides
-details on the core components and their interactions, and briefly discusses
-Cardano's eras and implementations.
+This section describes the high-level architecture of Cardano, providing 
+details on the core components and their interactions. 
 
 ### High level architecture of Cardano
 
