Change exemplary to example and Cardano EVM sidechains to example EVM sidechains

--- a/content/08-cardano-sidechains/01-basics/04-block-explorer.mdx
+++ b/content/08-cardano-sidechains/01-basics/04-block-explorer.mdx
@@ -13,7 +13,7 @@ When you use a block explorer, it will list fields and their contents.
 This document will help you understand the meaning of the field names and the
 significance of their contents.
 # Glossary
-These are the field names commonly used in block explorers on the Cardano EVM sidechain.
+These are the field names commonly used in block explorers on the example EVM sidechain.
 ## General terms
 <dl>
   <p></p><dt>
