--- a/content/08-cardano-sidechains/01-basics/01-introduction-sidechains.mdx
+++ b/content/08-cardano-sidechains/01-basics/01-introduction-sidechains.mdx
@@ -8,8 +8,8 @@ A sidechain is simply a blockchain that runs as a subservient chain to the Carda
   
 Input Output group (IOG) provides a sidechain toolkit that is designed to help developers create custom sidechains for a wide range of use cases. To prove the capability of the toolkit, the exemplar application is the Cardano EVM sidechain. EVM stands for Ethereum virtual machine. The Cardano EVM sidechain is EVM-compatible, which means deploying your Ethereum applications is just a matter of deploying your Solidity code on the sidechain and interacting with it through the Web3 API.
 
-## What is the Cardano EVM sidechain?
-The Cardano EVM sidechain project is an open-source Cardano sidechain protocol providing a client written in Scala. The Cardano EVM sidechain is a *child sidechain*, meaning that its starting, or genesis block, is seeded from the main chain and the child blockchain depends on the main chain. The Cardano EVM sidechain enables anyone to run a sidechain network passive node.
+## What is the example EVM sidechain?
+The example EVM sidechain project is an open-source Cardano sidechain protocol providing a client written in Scala. The EVM sidechain is a *child sidechain*, meaning that its starting, or genesis block, is seeded from the main chain and the child blockchain depends on the main chain. The example EVM sidechain enables anyone to run a sidechain network passive node.
 ## Sidechain advantages
 Sidechains offer advantages in interoperability, scalability, and compatibility.
 ### Interoperability
@@ -20,18 +20,18 @@ Just as a project manager has the trilemma of good, fast, or cheap (pick any two
 Because sidechains tend to be short and specific to an application domain, transactions can be completed more quickly, relieving the main chain of this load.
 The scalability improvement of sidechains comes without compromising security and need not affect decentralization, offering improvements in the blockchain trilemma. 
 ### Compatibility
-The Cardano EVM sidechain provides a proof of stake (PoS) blockchain running smart contracts written in Solidity. Ethereum smart contracts can run unchanged. The difference is that they will run faster and use a fraction of the resources that they use on a PoW chain. Because they run faster, the expectation is that the end user will pay much less in gas fees.
+The example EVM sidechain provides a proof of stake (PoS) blockchain running smart contracts written in Solidity. Ethereum smart contracts can run unchanged. The difference is that they will run faster and use a fraction of the resources that they use on a PoW chain. Because they run faster, the expectation is that the end user will pay much less in gas fees.
 ## Sidechain design elements
-The design of the Cardano EVM sidechain is based on the principles laid out in the [2018 white paper](https://iohk.io/en/research/library/papers/proof-of-stake-sidechains/) 'Proof-of-Stake Sidechains' by Peter Gazi1, Aggelos Kiayias, and Dionysis Zindros.  
+The design of the example EVM sidechain is based on the principles laid out in the [2018 white paper](https://iohk.io/en/research/library/papers/proof-of-stake-sidechains/) 'Proof-of-Stake Sidechains' by Peter Gazi1, Aggelos Kiayias, and Dionysis Zindros.  
 Here are some design features of the Cardano EVM sidechain relevant to Solidity developers.
 ### Two-way peg
-The Cardano EVM sidechain allows the transfer of assets back and forth between the Cardano blockchain and sidechains. The two-way peg that achieves this preserves the nature of the asset in both chains whenever the asset moves.
+The EVM sidechain allows the transfer of assets back and forth between the Cardano blockchain and sidechains. The two-way peg that achieves this preserves the nature of the asset in both chains whenever the asset moves.
 ### Proof of Stake
-Although the Solidity contract may be intended for a Proof of Work blockchain, the Cardano EVM sidechain uses the same secure PoS algorithm as Cardano, giving the well-known benefits of reduced energy usage, speed, and decentralization.
+Although the Solidity contract may be intended for a Proof of Work blockchain, the example EVM sidechain uses the same secure PoS algorithm as Cardano, giving the well-known benefits of reduced energy usage, speed, and decentralization.
 ### Firewall 
 The firewall property ensures that a catastrophic failure in one of the chains, such as a violation of its security assumptions, does not make the other chains vulnerable. This feature provides a measure of limited liability analogous to limited liability in the corporate world - when a limited company fails, its stockholders are only liable for the amount of their investment.
 ### Merged-staking
 A critical consideration in sidechain construction is safeguarding a new sidechain against attack.
-The Cardano EVM Sidechain construction features 'merged-staking', which allows main-chain validators who have signaled sidechain awareness to create sidechain blocks without moving any stake to the sidechain. Thus sidechain security can be maintained, given an honest stake majority among the entities that have signaled sidechain awareness. Especially in the bootstrapping stage, these main-chain validators are expected to be a large superset of the set of stakeholders that maintain assets in the sidechain.  
+The example EVM Sidechain construction features 'merged-staking', which allows main-chain validators who have signaled sidechain awareness to create sidechain blocks without moving any stake to the sidechain. Thus sidechain security can be maintained, given an honest stake majority among the entities that have signaled sidechain awareness. Especially in the bootstrapping stage, these main-chain validators are expected to be a large superset of the set of stakeholders that maintain assets in the sidechain.  
 ## More information
 For a full description of the theoretical underpinning of the design, refer to the [original white paper](https://eprint.iacr.org/2018/1239.pdf).
