--- a/content/08-cardano-sidechains/03-example-evm-sidechains/03-deploy-smart-contracts/02-setup-development.mdx
+++ b/content/08-cardano-sidechains/03-example-evm-sidechains/03-deploy-smart-contracts/02-setup-development.mdx
@@ -238,7 +238,7 @@ module.exports = {
 $ npx hardhat compile
 ```
 
-## Deploying to the Cardano EVM sidechain testnet
+## Deploying to the example EVM sidechain testnet
 
 Deploying with Hardhat utilizes deployment scripts located in `scripts/`. To deploy with Hardhat, execute the script with `atago` as the network option.
 
@@ -247,7 +247,7 @@ $ npx hardhat run scripts/sample-script.js --network atago
 Greeter deployed to: 0x95E1C8F6C00d8cB518faBA33c8Ae814fc12E3090
 ```
 
-🎉 Hurray! You're deployed to Atago, the Cardano EVM sidechain testnet, and can search your deployment on the [testnet explorer]( http://explorer.mamba.atago/) 
+🎉 Hurray! You're deployed to Atago, the example EVM sidechain testnet, and can search your deployment on the [testnet explorer]( http://explorer.mamba.atago/) 
    
 # Truffle
 
@@ -276,7 +276,7 @@ Web3.js v1.5.3
 
 ## Truffle Config
 
-Update the Truffle configuration file with Atago credentials. Atago is the name of the Cardano EVM sidechain testnet.
+Update the Truffle configuration file with Atago credentials. Atago is the name of the example EVM sidechain testnet.
 
 ```
 module.exports = {
