ETCM-2805 Add commercial link, text to Sidechains intro for leads

--- a/content/08-cardano-sidechains/01-basics/01-introduction-sidechains.mdx
+++ b/content/08-cardano-sidechains/01-basics/01-introduction-sidechains.mdx
@@ -35,3 +35,5 @@ A critical consideration in sidechain construction is safeguarding a new sidecha
 The example EVM Sidechain construction features 'merged-staking', which allows main-chain validators who have signaled sidechain awareness to create sidechain blocks without moving any stake to the sidechain. Thus sidechain security can be maintained, given an honest stake majority among the entities that have signaled sidechain awareness. Especially in the bootstrapping stage, these main-chain validators are expected to be a large superset of the set of stakeholders that maintain assets in the sidechain.  
 ## More information
 For a full description of the theoretical underpinning of the design, refer to the [original white paper](https://eprint.iacr.org/2018/1239.pdf).
+## Contact Input Output
+If you are interested in a commercial partnership with IOG, please complete the form on the [contact page](https://iohk.io/en/contact-commercial/).
