--- a/content/08-cardano-sidechains/03-example-evm-sidechains/01-metamask.mdx
+++ b/content/08-cardano-sidechains/03-example-evm-sidechains/01-metamask.mdx
@@ -13,7 +13,7 @@ Use this link to install MetaMask as a browser extension or mobile app: https://
 
 Choose the option to create an account.
 
-![create-account](../images/MetaMask2.png)  
+![create-account](../../images/MetaMask2.png)  
 Back up your wallet seed phrase and store it in a safe place.
 
 ## Add Cardano EVM sidechain network(s) in Settings
