--- a/content/08-cardano-sidechains/03-example-evm-sidechains/03-deploy-smart-contracts/03-verify-contract.mdx
+++ b/content/08-cardano-sidechains/03-example-evm-sidechains/03-deploy-smart-contracts/03-verify-contract.mdx
@@ -17,21 +17,21 @@ From any supported browser, go to the URL
 http://explorer.mamba.atago  
 The main screen shows the current head of the chain.
 # Block Explorer main screen
-![Block Explorer main screen with transaction calls](../images/01_main_screen.png)  
+![Block Explorer main screen with transaction calls](../../../images/01_main_screen.png)  
 In the above image of the block explorer, note the hash of the top transaction call.
 # Detail screen
 When we click on the hash of a transaction, its details are shown:  
-![Transaction call details](../images/02_transaction_call_details.png)  
+![Transaction call details](../../../images/02_transaction_call_details.png)  
 You can see the status of the transaction (success or failure) and the smart contract it was executed against (if the transaction is a smart contract call).  
 # Contract page
 Click on the contract address (labeled either `To: [Contract  0x.... created]` or ` Interacted With 0x...`)  
-![Contract details](../images/02_1_contract_details.png) 
+![Contract details](../../../images/02_1_contract_details.png) 
 # Code tab
 On this page, after scrolling down you can see tabs, one of them being "Code". Clicking it will show known code if it exists, or raw bytes of the contract if the source is not known. 
 ![Code tab](../images/02_1_code_tab.png)  
 # Verifying a contract 
 In the first row of the code tab, there is a link to verify the contract.   
-![Image of the verification page](../images/04-and-03_verification_page.png)   
+![Image of the verification page](../../../images/04-and-03_verification_page.png)   
 
 You can choose to verify using one of these methods:  
 - Via flattened source code
@@ -41,10 +41,10 @@ You can choose to verify using one of these methods:
 Other verification methods may be added later. 
 
 The next two images show the contract verification form that will be presented to you.  
-![Image of contract form 1](../images/05_contract_form_1.png)  
-![Image of contract form 2](../images/06_contract_form_2.png)  
+![Image of contract form 1](../../../images/05_contract_form_1.png)  
+![Image of contract form 2](../../../images/06_contract_form_2.png)  
   
 After the forms have been completed and submitted, you will see the results of the verification like this:  
-![Image after filling forms](../images/07_after_filling_forms.png)
+![Image after filling forms](../../../images/07_after_filling_forms.png)
    
 Now the smart contract can be inspected by any other user of the block explorer.
